--- a/design.ui
+++ b/design.ui
@@ -41,6 +41,9 @@
      </property>
      <item>
       <widget class="QSlider" name="sldLinerTrack">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="maximum">
         <number>10</number>
        </property>
@@ -77,7 +80,7 @@
       <number>5</number>
      </property>
      <item>
-      <widget class="QTableWidget" name="txMotorsStates">
+      <widget class="QTableWidget" name="twMotorsStates">
        <row>
         <property name="text">
          <string>Ticks</string>
@@ -465,6 +468,9 @@
         </property>
         <item>
          <widget class="QSlider" name="s1">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimum">
            <number>-50</number>
           </property>
@@ -478,6 +484,9 @@
         </item>
         <item>
          <widget class="QSlider" name="s2">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimum">
            <number>-50</number>
           </property>
@@ -491,6 +500,9 @@
         </item>
         <item>
          <widget class="QSlider" name="s3">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimum">
            <number>-50</number>
           </property>
@@ -504,6 +516,9 @@
         </item>
         <item>
          <widget class="QSlider" name="s4">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimum">
            <number>-50</number>
           </property>
@@ -517,6 +532,9 @@
         </item>
         <item>
          <widget class="QSlider" name="s5">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimum">
            <number>-50</number>
           </property>
@@ -530,6 +548,9 @@
         </item>
         <item>
          <widget class="QSlider" name="s6">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="minimum">
            <number>-50</number>
           </property>
@@ -791,7 +812,7 @@
           <number>5</number>
          </property>
          <item>
-          <widget class="QLineEdit" name="lineEdit"/>
+          <widget class="QLineEdit" name="leStatsPath"/>
          </item>
          <item>
           <widget class="QPushButton" name="btnSaveStats">
