--- a/design.ui
+++ b/design.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>810</width>
+    <width>822</width>
     <height>881</height>
    </rect>
   </property>
@@ -171,38 +171,7 @@
        <property name="bottomMargin">
         <number>5</number>
        </property>
-       <item row="1" column="1">
-        <widget class="QPushButton" name="btnAddObject">
-         <property name="text">
-          <string>Add Object</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QPushButton" name="btnDeleteLast">
-         <property name="text">
-          <string>Delete Last Object</string>
-         </property>
-        </widget>
-       </item>
-       <item row="2" column="1">
-        <widget class="QPushButton" name="btnClearSession">
-         <property name="text">
-          <string>Clear Session</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="1">
-        <widget class="QPushButton" name="btnDownloadSession">
-         <property name="text">
-          <string>Download Session</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLineEdit" name="leSessionPath"/>
-       </item>
-       <item row="1" column="0">
+       <item row="0" column="0">
         <widget class="QComboBox" name="cbObjects">
          <item>
           <property name="text">
@@ -224,6 +193,37 @@
            <string>Reject</string>
           </property>
          </item>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QPushButton" name="btnAddObject">
+         <property name="text">
+          <string>Add Object</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QPushButton" name="btnDeleteLast">
+         <property name="text">
+          <string>Delete Last Object</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QPushButton" name="btnClearSession">
+         <property name="text">
+          <string>Clear Session</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLineEdit" name="leSessionPath"/>
+       </item>
+       <item row="2" column="1">
+        <widget class="QPushButton" name="btnDownloadSession">
+         <property name="text">
+          <string>Download Session</string>
+         </property>
         </widget>
        </item>
       </layout>
@@ -249,13 +249,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>7</x>
       <y>9</y>
       <width>801</width>
-      <height>116</height>
+      <height>121</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
@@ -420,13 +420,13 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>12</x>
-      <y>123</y>
+      <y>133</y>
       <width>801</width>
-      <height>201</height>
+      <height>191</height>
      </rect>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout_5">
@@ -443,7 +443,7 @@
       <number>5</number>
      </property>
      <item>
-      <widget class="QGroupBox" name="">
+      <widget class="QGroupBox" name="groupBox">
        <property name="minimumSize">
         <size>
          <width>300</width>
@@ -673,12 +673,18 @@
          <property name="text">
           <string>Wait</string>
          </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="lWork">
          <property name="text">
           <string>Work</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
@@ -687,12 +693,18 @@
          <property name="text">
           <string>Pause</string>
          </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
+         </property>
         </widget>
        </item>
        <item>
         <widget class="QLabel" name="lStop">
          <property name="text">
           <string>Stop</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
@@ -827,12 +839,12 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>13</x>
       <y>563</y>
-      <width>491</width>
+      <width>481</width>
       <height>311</height>
      </rect>
     </property>
